--- a/estilosProductos.css
+++ b/estilosProductos.css
@@ -79,9 +79,9 @@ label{
 }
 .arriba{
     background-color: transparent;
-    width: 500px;
+    width: 510px;
     height: 30px;
-   border: 1px solid black;
+   border: none;
    border-bottom: none;
    padding: 10px;
    display: flex;
@@ -90,6 +90,14 @@ label{
 
 }
 .botonGuardar{
-    width:50px;
+    width:100px;
     height: 50px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    box-shadow: 0px 0px 5px 5px indigo;
+    border-top-left-radius: 20px;          
+    border-top-right-radius: 20px;
+    background-color: rgb(56, 1, 139);
+
 }
